# python-template

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: main.py
