[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jin Chen <jin.chen@jinchen.me>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "0.6.8"

[tool.poetry.scripts]
app = "app.scripts.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--capture=tee-sys"]

[tool.ruff]
fix = true
line-length = 120
force-exclude = true
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "N",
    "UP",
    "ASYNC",
    "B",
    "A",
    "C4",
    "DTZ",
    "ISC",
    "PIE",
    "SIM",
    "TID",
    "TCH",
    "PGH",
    "RUF",
]
ignore = ["F401"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
